# lukosbot-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: cargo.yml
resources/: application.example.toml
src/: config.rs  lifecycle.rs  main.rs  model.rs
src/commands/: github.rs  help.rs  mod.rs  ping.rs
src/core/: command_processor.rs  command_registry.rs  command_source.rs  dispatcher.rs  message_dispatcher.rs  message_sender_hub.rs  mod.rs  pipeline_processor.rs  striped_executor.rs
src/platform/: mod.rs
src/platform/discord/: mod.rs  receiver.rs  sender.rs  stack.rs
src/platform/telegram/: mod.rs  receiver.rs  sender.rs
