[package]
name = "lukosbot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
azalea-brigadier = "=0.14.0"
url = "2"
config = "0.15.19"
toml = "0.9.10"
teloxide = "0.17"
serenity = { version = "0.12", default-features = false, features = ["client",
    "gateway",
    "model",
    "http",
    "builder",
    "rustls_backend"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls-tls", "socks"] }
serde_json = "1.0.145"

